[package]
name = "cairo-lang-compiler-wasm"
version = "0.1.0"
authors = ["WenheLI <wl1508@nyu.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
anyhow.workspace = true
clap.workspace = true
smol_str = { version = "0.2.0", features = ["serde"] }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "1.0.0-alpha.7" }
cairo-lang-defs = { path = "../cairo-lang-defs", version = "1.0.0-alpha.7" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "1.0.0-alpha.7" }
cairo-lang-compiler = { path = "../cairo-lang-compiler", version = "1.0.0-alpha.7" }
cairo-lang-casm = { path = "../cairo-lang-casm", version = "1.0.0-alpha.7" }
cairo-lang-sierra-to-casm = { path = "../cairo-lang-sierra-to-casm", version = "1.0.0-alpha.7" }
log.workspace = true
cairo-lang-lowering = { path = "../cairo-lang-lowering", version = "1.0.0-alpha.7" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", version = "1.0.0-alpha.7" }
cairo-lang-sierra = { path = "../cairo-lang-sierra", version = "1.0.0-alpha.7" }
cairo-lang-sierra-generator = { path = "../cairo-lang-sierra-generator", version = "1.0.0-alpha.7" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "1.0.0-alpha.7" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "1.0.0-alpha.7" }
cairo-lang-plugins = { path = "../cairo-lang-plugins", version = "1.0.0-alpha.7" }
cairo-lang-project = { path = "../cairo-lang-project", version = "1.0.0-alpha.7" }
salsa.workspace = true
thiserror.workspace = true
cairo-lang-utils = { path = "../cairo-lang-utils", version = "1.0.0-alpha.7" }
parking_lot_core = "=0.8.0"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
